# LIDAROS

components/components/: component.py  persona.py
components/test/: test_criteria.py  test_persona.py
interfaces/: CMakeLists.txt
interfaces/msg/: LaserChannel.msg
interfaces/profiles/: jsonnet_compiler.py
interfaces/profiles/base/: device_profile.jsonnet  static_component_profile.jsonnet  topic_capability_template.jsonnet
interfaces/profiles/lasers/: laser_profile.jsonnet  testlaser_persona.jsonnet
interfaces/profiles/test/: personagenerator.py  testpersona_persona.jsonnet  testpersona_profile.jsonnet
interfaces/srv/: GetLaserPower.srv  GetLaserTemperature.srv  SetLaserPower.srv  setlaserpower.srv
lasers/: CMakeLists.txt
lasers/lasers/: base_profile.jsonnet  component_profile.jsonnet  lasernode.py  service_capability_template.jsonnet  singemodelaser_descriptor.jsonnet  testlaser_persona.jsonnet
